Pom cleanups